// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`solidselectors 1. solidselectors: 1. solidselectors 1`] = `
"
import { createSelector } from 'solidselectors';
const selector = createSelector({ prefix: 'cool '});

      ↓ ↓ ↓ ↓ ↓ ↓

const selector = \\"cool :0\\";
"
`;

exports[`solidselectors 2. solidselectors: 2. solidselectors 1`] = `
"
import POM from 'solidselectors';
const selector = POM.createSelector({ prefix: 'cool '});

      ↓ ↓ ↓ ↓ ↓ ↓

const selector = \\"cool :1\\";
"
`;

exports[`solidselectors 3. solidselectors: 3. solidselectors 1`] = `
"
const { createSelector } = require('solidselectors');
const selector = createSelector({ prefix: 'cool '});

      ↓ ↓ ↓ ↓ ↓ ↓

const selector = \\"cool :2\\";
"
`;

exports[`solidselectors 4. solidselectors: 4. solidselectors 1`] = `
"
const POM = require('solidselectors');
const selector = POM.createSelector({ prefix: 'cool '});

      ↓ ↓ ↓ ↓ ↓ ↓

const selector = \\"cool :3\\";
"
`;

exports[`solidselectors 5. solidselectors: 5. solidselectors 1`] = `
"
import POM, { createSelector, somethingElse } from 'solidselectors';
const selector = createSelector({ prefix: 'cool '});
POM.keepsThis();
POM.keepsThat();
somethingElse('stays too');

      ↓ ↓ ↓ ↓ ↓ ↓

import POM, { somethingElse } from 'solidselectors';
const selector = \\"cool :4\\";
POM.keepsThis();
POM.keepsThat();
somethingElse('stays too');
"
`;

exports[`solidselectors 6. solidselectors: 6. solidselectors 1`] = `
"
const { createSelector, somethingElse } = require('solidselectors');
const selector = createSelector({ prefix: 'cool '});
somethingElse('stays put');

      ↓ ↓ ↓ ↓ ↓ ↓

const {
  somethingElse
} = require('solidselectors');

const selector = \\"cool :5\\";
somethingElse('stays put');
"
`;

exports[`solidselectors 7. solidselectors: 7. solidselectors 1`] = `
"
const { createSelector, somethingElse } = require('solidselectors');
const selector = createSelector({ prefix: 'cool '});
somethingElse('stays put');
somethingElse('stays put');

      ↓ ↓ ↓ ↓ ↓ ↓

const {
  somethingElse
} = require('solidselectors');

const selector = \\"cool :6\\";
somethingElse('stays put');
somethingElse('stays put');
"
`;
